--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -25,7 +25,6 @@ feature: WE CAN.jpg
 ![236311_04big.jpg]({{site.baseurl}}/assets/images/posts/236311_04big.jpg)
 ![hor.jpg]({{site.baseurl}}/assets/images/posts/hor.jpg)
 ![235288_09big.jpg]({{site.baseurl}}/assets/images/posts/235288_09big.jpg)
-![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
-![d1a1b6603c609f941da550d6d0464bbe.jpg]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
+]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
 ![power.jpg]({{site.baseurl}}/assets/images/posts/power.jpg)
 ![64766966-cannibalism-people.jpg]({{site.baseurl}}/assets/images/posts/64766966-cannibalism-people.jpg)
