--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,8 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
+
 
 ![spratt.jpg]({{site.baseurl}}/assets/images/posts/spratt.jpg)
 
