--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![reject.jpg]({{site.baseurl}}/assets/images/posts/reject.jpg)
+
 
 ![reddream.jpg]({{site.baseurl}}/assets/images/posts/reddream.jpg)
 ![red.jpg]({{site.baseurl}}/assets/images/posts/red.jpg)
