--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -1,11 +1,10 @@
 ---
 layout: post
 published: true
-title: art
+title: ASTRO WEEKLY
 feature: bored.jpg
 ---
 
 
 
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
-
