--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -7,4 +7,6 @@ feature: bored.jpg
 
 
 
+![1234.jpg]({{site.baseurl}}/assets/images/posts/1234.jpg)
+
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
