--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -8,5 +8,7 @@ feature: 1234.jpg
 
 
 ![1234.jpg]({{site.baseurl}}/assets/images/posts/1234.jpg)
+![angel.jpg]({{site.baseurl}}/assets/images/posts/angel.jpg)
+
 
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
