--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,6 +4,8 @@ published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
+![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
+
 ![blblåttuu.jpg]({{site.baseurl}}/assets/images/posts/blblåttuu.jpg)
 
 ![go0.jpg]({{site.baseurl}}/assets/images/posts/go0.jpg)
