--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,8 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![replace.jpg]({{site.baseurl}}/assets/images/posts/replace.jpg)
+
 ![reject.jpg]({{site.baseurl}}/assets/images/posts/reject.jpg)
 ![DALI lama.jpg]({{site.baseurl}}/assets/images/posts/DALI lama.jpg)
 ![reddream.jpg]({{site.baseurl}}/assets/images/posts/reddream.jpg)
