--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -6,7 +6,7 @@ feature: tsunami.jpg
 ---
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![mört.jpg]({{site.baseurl}}/assets/images/posts/mört.jpg)
-
+![60.jpg]({{site.baseurl}}/assets/images/posts/60.jpg)
 ![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
