--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -6,6 +6,7 @@ feature: WE CAN.jpg
 ---
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
 ![blblåttuu.jpg]({{site.baseurl}}/assets/images/posts/blblåttuu.jpg)
+![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
