--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: FIONAS ANTIGUBBVÄLDE SIDA
+title: FIONAS
 feature: WE CAN.jpg
 ---
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
