--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -5,4 +5,6 @@ title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
 ![angel.jpg]({{site.baseurl}}/assets/images/posts/angel.jpg)
+![astro.jpg]({{site.baseurl}}/assets/images/posts/astro.jpg)
+
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
