--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -11,6 +11,8 @@ feature: WE CAN.jpg
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
 ![asshole.jpg]({{site.baseurl}}/assets/images/posts/asshole.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
+![fi.jpg]({{site.baseurl}}/assets/images/posts/fi.jpg)
+
 ![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
 ![betty.jpg]({{site.baseurl}}/assets/images/posts/betty.jpg)
 ![teck.jpg]({{site.baseurl}}/assets/images/posts/teck.jpg)
