--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -9,6 +9,7 @@ feature: WE CAN.jpg
 ![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
+![ass.jpg]({{site.baseurl}}/assets/images/posts/ass.jpg)
 
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
 ![fi.jpg]({{site.baseurl}}/assets/images/posts/fi.jpg)
