--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -8,6 +8,8 @@ feature: WE CAN.jpg
 ![blblåttuu.jpg]({{site.baseurl}}/assets/images/posts/blblåttuu.jpg)
 ![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
+![beauty.jpg]({{site.baseurl}}/assets/images/posts/beauty.jpg)
+
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
 ![ass.jpg]({{site.baseurl}}/assets/images/posts/ass.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
