--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -5,6 +5,7 @@ title: FIONAS
 feature: WE CAN.jpg
 ---
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
+![censur.jpg]({{site.baseurl}}/assets/images/posts/censur.jpg)
 
 ![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
