--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,8 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![snögubbe.jpg]({{site.baseurl}}/assets/images/posts/snögubbe.jpg)
+
 ![blårej.jpg]({{site.baseurl}}/assets/images/posts/blårej.jpg)
 ![singels.jpg]({{site.baseurl}}/assets/images/posts/singels.jpg)
 ![reject.jpg]({{site.baseurl}}/assets/images/posts/reject.jpg)
