--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,5 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![centered.jpg]({{site.baseurl}}/assets/images/posts/centered.jpg)
+
 ![astro.jpg]({{site.baseurl}}/assets/images/posts/astro.jpg)
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
