--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -5,6 +5,7 @@ title: DREAM
 feature: tsunami.jpg
 ---
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
+![col.jpg]({{site.baseurl}}/assets/images/posts/col.jpg)
 
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
