--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -31,5 +31,5 @@ feature: WE CAN.jpg
 ![64766966-cannibalism-people.jpg]({{site.baseurl}}/assets/images/posts/64766966-cannibalism-people.jpg)
 ![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
-
+![morals.jpg]({{site.baseurl}}/assets/images/posts/morals.jpg)
 
