--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -6,6 +6,8 @@ feature: tsunami.jpg
 ---
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![col.jpg]({{site.baseurl}}/assets/images/posts/col.jpg)
+![tur.jpg]({{site.baseurl}}/assets/images/posts/tur.jpg)
+
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
@@ -20,4 +22,3 @@ feature: tsunami.jpg
 ![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
 ![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
-
