--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -32,4 +32,5 @@ feature: WE CAN.jpg
 ![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 ![morals.jpg]({{site.baseurl}}/assets/images/posts/morals.jpg)
+![lissss.jpg]({{site.baseurl}}/assets/images/posts/lissss.jpg)
 
