--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -2,5 +2,6 @@
 layout: post
 published: true
 title: new pic
+feature: '{site.baseurl'
 ---
-![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
+!]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
