--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -5,3 +5,5 @@ title: new pic
 feature: ISSIGT.jpg
 ---
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
+![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
+
