--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,8 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![digital_art_texture_188_by_mercurycode-d7pwevt.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_188_by_mercurycode-d7pwevt.jpg)
+
 
 ![blårej.jpg]({{site.baseurl}}/assets/images/posts/blårej.jpg)
 ![singels.jpg]({{site.baseurl}}/assets/images/posts/singels.jpg)
