--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -20,7 +20,7 @@ feature: uk ut ur eu.jpg
 ![Batman-With-Joker-Card.jpg]({{site.baseurl}}/assets/images/posts/Batman-With-Joker-Card.jpg)
 ![Child figh8ter.jpg]({{site.baseurl}}/assets/images/posts/Child figh8ter.jpg)
 ![city_ruins_street_hd-wallpaper-247444.jpg]({{site.baseurl}}/assets/images/posts/city_ruins_street_hd-wallpaper-247444.jpg)
-![Copy (2) of Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy (2).jpg)
+![Ray_or_light.jpg]({{site.baseurl}}/assets/images/posts/Ray_or_light.jpg)
 ![elviradrum.jpg]({{site.baseurl}}/assets/images/posts/elviradrum.jpg)
 ![Flaggor_Sverige_2.jpg]({{site.baseurl}}/assets/images/posts/Flaggor_Sverige_2.jpg)
 ![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)!
