--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -23,7 +23,7 @@ feature: uk ut ur eu.jpg
 ![Ray_or_light.jpg]({{site.baseurl}}/assets/images/posts/Ray_or_light.jpg)
 ![elviradrum.jpg]({{site.baseurl}}/assets/images/posts/elviradrum.jpg)
 ![Flaggor_Sverige_2.jpg]({{site.baseurl}}/assets/images/posts/Flaggor_Sverige_2.jpg)
-![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)!
+![]({{site.baseurl}}/assets/images/posts/Fotolia_40899204_5te5tfweSubscription_L.jpg)
 ![israel.jpg]({{site.baseurl}}/assets/images/posts/israel.jpg)
 ![jas.jpg]({{site.baseurl}}/assets/images/posts/jas.jpg)
 ![jul 2012 049 (2).jpg]({{site.baseurl}}/assets/images/posts/jul 2012 049 (2).jpg)
