--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -6,5 +6,7 @@ feature: ISSIGT.jpg
 ---
 ![remember.jpg]({{site.baseurl}}/assets/images/posts/remember.jpg)
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
+![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
+
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
 ![digital_art_texture_188_by_mercurycode-d7pwevt.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_188_by_mercurycode-d7pwevt.jpg)
