--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -8,4 +8,4 @@ feature: ISSIGT.jpg
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
-![digital_art_texture_188_by_mercurycode-d7pwevt.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_188_by_mercurycode-d7pwevt.jpg)
+]({{site.baseurl}}/assets/images/posts/digital_art_texture_188_by_mercurycode-d7pwevt.jpg)
