--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -8,4 +8,6 @@ feature: ISSIGT.jpg
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
+![go for it.jpg]({{site.baseurl}}/assets/images/posts/go for it.jpg)
+
 
