--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -9,5 +9,5 @@ feature: ISSIGT.jpg
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
 ![go for it.jpg]({{site.baseurl}}/assets/images/posts/go for it.jpg)
-
+![in me.jpg]({{site.baseurl}}/assets/images/posts/in me.jpg)
 
