--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -4,7 +4,7 @@ published: true
 title: FIONAS
 feature: WE CAN.jpg
 ---
-![kicks in.jpg]({{site.baseurl}}/assets/images/posts/kicks in.jpg)
+![kicks-in.jpg]({{site.baseurl}}/assets/images/posts/kicks in.jpg)
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
 ![man.jpg]({{site.baseurl}}/assets/images/posts/man.jpg)
 ![censur.jpg]({{site.baseurl}}/assets/images/posts/censur.jpg)
@@ -34,4 +34,3 @@ feature: WE CAN.jpg
 ![morals.jpg]({{site.baseurl}}/assets/images/posts/morals.jpg)
 ![lissss.jpg]({{site.baseurl}}/assets/images/posts/lissss.jpg)
 ![kiss ass.jpg]({{site.baseurl}}/assets/images/posts/kiss ass.jpg)
-
