--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![mix.jpg]({{site.baseurl}}/assets/images/posts/mix.jpg)
+
 ![remember.jpg]({{site.baseurl}}/assets/images/posts/remember.jpg)
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
