--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -10,4 +10,6 @@ feature: ISSIGT.jpg
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
 ![go for it.jpg]({{site.baseurl}}/assets/images/posts/go for it.jpg)
 ![Weltall-201100280505.jpg]({{site.baseurl}}/assets/images/posts/Weltall-201100280505.jpg)
+![Royal-Palace-Stockholm.jpg]({{site.baseurl}}/assets/images/posts/Royal-Palace-Stockholm.jpg)
+
 
