--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -19,3 +19,5 @@ feature: tsunami.jpg
 ![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
 ![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
 ![utan text (2).jpg]({{site.baseurl}}/assets/images/posts/utan text (2).jpg)
+![4cb3b3f8ef1fbc683305e7ba3b5093ec.jpg]({{site.baseurl}}/assets/images/posts/4cb3b3f8ef1fbc683305e7ba3b5093ec.jpg)
+
