--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -19,4 +19,6 @@ feature: tsunami.jpg
 ![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
 ![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
 ![utan text (2).jpg]({{site.baseurl}}/assets/images/posts/utan text (2).jpg)
+![flyg.jpg]({{site.baseurl}}/assets/images/posts/flyg.jpg)
+
 
