--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![SÖK.jpg]({{site.baseurl}}/assets/images/posts/SÖK.jpg)
+
 ![remember.jpg]({{site.baseurl}}/assets/images/posts/remember.jpg)
 ![ISSIGT.jpg]({{site.baseurl}}/assets/images/posts/ISSIGT.jpg)
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
@@ -12,6 +14,3 @@ feature: ISSIGT.jpg
 ![Weltall-201100280505.jpg]({{site.baseurl}}/assets/images/posts/Weltall-201100280505.jpg)
 ![Royal-Palace-Stockholm.jpg]({{site.baseurl}}/assets/images/posts/Royal-Palace-Stockholm.jpg)
 ![never.jpg]({{site.baseurl}}/assets/images/posts/never.jpg)
-
-
-
