--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 
 ![snöfallMedium.jpg]({{site.baseurl}}/assets/images/posts/snöfallMedium.jpg)
 ![remember.jpg]({{site.baseurl}}/assets/images/posts/remember.jpg)
