--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -6,6 +6,7 @@ feature: ISSIGT.jpg
 ---
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![snöfallMedium.jpg]({{site.baseurl}}/assets/images/posts/snöfallMedium.jpg)
+![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
 
 ![behind.jpg]({{site.baseurl}}/assets/images/posts/behind.jpg)
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
