--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -33,3 +33,5 @@ feature: WE CAN.jpg
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 ![morals.jpg]({{site.baseurl}}/assets/images/posts/morals.jpg)
 ![lissss.jpg]({{site.baseurl}}/assets/images/posts/lissss.jpg)
+![glWEBBMIRRORas.jpg]({{site.baseurl}}/assets/images/posts/glWEBBMIRRORas.jpg)
+
