--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![BOTTENLÖST.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖST.jpg)
+
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![snöfallMedium.jpg]({{site.baseurl}}/assets/images/posts/snöfallMedium.jpg)
 ![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
@@ -11,5 +13,4 @@ feature: ISSIGT.jpg
 ![BOTTENLÖ.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖ.jpg)
 ![go for it.jpg]({{site.baseurl}}/assets/images/posts/go for it.jpg)
 ![Weltall-201100280505.jpg]({{site.baseurl}}/assets/images/posts/Weltall-201100280505.jpg)
-
 ![never.jpg]({{site.baseurl}}/assets/images/posts/never.jpg)
