--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,8 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![blåbotten.jpg]({{site.baseurl}}/assets/images/posts/blåbotten.jpg)
+
 ![12g.jpg]({{site.baseurl}}/assets/images/posts/12g.jpg)
 ![bigbrother.jpg]({{site.baseurl}}/assets/images/posts/bigbrother.jpg)
 ![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
