--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -5,6 +5,8 @@ title: new pic
 feature: ISSIGT.jpg
 ---
 ![BOTTENLÖST.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖST.jpg)
+![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
+
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![snöfallMedium.jpg]({{site.baseurl}}/assets/images/posts/snöfallMedium.jpg)
 ![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
