--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -7,8 +7,9 @@ feature: ISSIGT.jpg
 ![BOTTENLÖST.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖST.jpg)
 ![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
+![feel.jpg]({{site.baseurl}}/assets/images/posts/feel.jpg)
+
 ![snöfallMedium.jpg]({{site.baseurl}}/assets/images/posts/snöfallMedium.jpg)
 ![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
 ![go for it.jpg]({{site.baseurl}}/assets/images/posts/go for it.jpg)
-
 ![never.jpg]({{site.baseurl}}/assets/images/posts/never.jpg)
