--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![KATAS.jpg]({{site.baseurl}}/assets/images/posts/KATAS.jpg)
+
 ![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
 ![BOTTENLÖST.jpg]({{site.baseurl}}/assets/images/posts/BOTTENLÖST.jpg)
 ![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
