--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -6,6 +6,9 @@ feature: tsunami.jpg
 ---
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
+![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
+![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
+![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
