--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -23,3 +23,6 @@ feature: tsunami.jpg
 ![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
 ![utan text (2).jpg]({{site.baseurl}}/assets/images/posts/utan text (2).jpg)
 ![flyg.jpg]({{site.baseurl}}/assets/images/posts/flyg.jpg)
+![KATAS.jpg]({{site.baseurl}}/assets/images/posts/KATAS.jpg)
+![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
+
