--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -25,4 +25,6 @@ feature: tsunami.jpg
 ![flyg.jpg]({{site.baseurl}}/assets/images/posts/flyg.jpg)
 ![KATAS.jpg]({{site.baseurl}}/assets/images/posts/KATAS.jpg)
 ![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
+![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
+
 
