--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -26,5 +26,7 @@ feature: tsunami.jpg
 ![KATAS.jpg]({{site.baseurl}}/assets/images/posts/KATAS.jpg)
 ![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
 ![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
+![dig.jpg]({{site.baseurl}}/assets/images/posts/dig.jpg)
+
 
 
