--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![trump.jpg]({{site.baseurl}}/assets/images/posts/trump.jpg)
 ![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
 ![blårej.jpg]({{site.baseurl}}/assets/images/posts/blårej.jpg)
 ![singels.jpg]({{site.baseurl}}/assets/images/posts/singels.jpg)
