--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,8 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![trust.jpg]({{site.baseurl}}/assets/images/posts/trust.jpg)
+
 ![trump.jpg]({{site.baseurl}}/assets/images/posts/trump.jpg)
 ![smile.jpg]({{site.baseurl}}/assets/images/posts/smile.jpg)
 ![blårej.jpg]({{site.baseurl}}/assets/images/posts/blårej.jpg)
