--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![linlinwebb.jpg]({{site.baseurl}}/assets/images/posts/linlinwebb.jpg)
 ![do.jpg]({{site.baseurl}}/assets/images/posts/do.jpg)
 ![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
