--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -7,5 +7,6 @@ feature: ISSIGT.jpg
 ![rabwebbrabbbit.jpg]({{site.baseurl}}/assets/images/posts/rabwebbrabbbit.jpg)
 ![linlinwebb.jpg]({{site.baseurl}}/assets/images/posts/linlinwebb.jpg)
 ![do.jpg]({{site.baseurl}}/assets/images/posts/do.jpg)
+![h-silentspend-aspirations.jpg]({{site.baseurl}}/assets/images/posts/h-silentspend-aspirations.jpg)
 ![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
