--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -8,7 +8,7 @@ feature: WE CAN.jpg
 ![control.jpg]({{site.baseurl}}/assets/images/posts/control.jpg)
 ![man.jpg]({{site.baseurl}}/assets/images/posts/man.jpg)
 ![censur.jpg]({{site.baseurl}}/assets/images/posts/censur.jpg)
-
+![h-silentspend-aspirations.jpg]({{site.baseurl}}/assets/images/posts/h-silentspend-aspirations.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
 ![beauty.jpg]({{site.baseurl}}/assets/images/posts/beauty.jpg)
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
