--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![boxas.jpg]({{site.baseurl}}/assets/images/posts/boxas.jpg)
 ![rabwebbrabbbit.jpg]({{site.baseurl}}/assets/images/posts/rabwebbrabbbit.jpg)
 ![linlinwebb.jpg]({{site.baseurl}}/assets/images/posts/linlinwebb.jpg)
 ![do.jpg]({{site.baseurl}}/assets/images/posts/do.jpg)
