--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![lukas.jpg]({{site.baseurl}}/assets/images/posts/lukas.jpg)
 ![change.jpg]({{site.baseurl}}/assets/images/posts/change.jpg)
 ![boxas.jpg]({{site.baseurl}}/assets/images/posts/boxas.jpg)
 ![rabwebbrabbbit.jpg]({{site.baseurl}}/assets/images/posts/rabwebbrabbbit.jpg)
