--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![asskruvigelkot.jpg]({{site.baseurl}}/assets/images/posts/asskruvigelkot.jpg)
 ![lukas.jpg]({{site.baseurl}}/assets/images/posts/lukas.jpg)
 ![change.jpg]({{site.baseurl}}/assets/images/posts/change.jpg)
 ![boxas.jpg]({{site.baseurl}}/assets/images/posts/boxas.jpg)
