--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![root-tree.jpg]({{site.baseurl}}/assets/images/posts/root-tree.jpg)
 ![feb.jpg]({{site.baseurl}}/assets/images/posts/feb.jpg)
 ![PRESENT 19-1.jpg]({{site.baseurl}}/assets/images/posts/PRESENT 19-1.jpg)
 ![centered.jpg]({{site.baseurl}}/assets/images/posts/centered.jpg)
