--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,7 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
 ![ytu.jpg]({{site.baseurl}}/assets/images/posts/ytu.jpg)
 ![blåbotten.jpg]({{site.baseurl}}/assets/images/posts/blåbotten.jpg)
 ![pekingar.jpg]({{site.baseurl}}/assets/images/posts/pekingar.jpg)
