--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![groda.jpg]({{site.baseurl}}/assets/images/posts/groda.jpg)
 ![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
 ![ytu.jpg]({{site.baseurl}}/assets/images/posts/ytu.jpg)
 ![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
