--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -5,6 +5,7 @@ title: DREAM
 feature: tsunami.jpg
 ---
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
+![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
@@ -27,6 +28,3 @@ feature: tsunami.jpg
 ![INTRESSANT.jpg]({{site.baseurl}}/assets/images/posts/INTRESSANT.jpg)
 ![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
 ![dig.jpg]({{site.baseurl}}/assets/images/posts/dig.jpg)
-
-
-
