--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -6,6 +6,7 @@ feature: ISSIGT.jpg
 ---
 ![groda.jpg]({{site.baseurl}}/assets/images/posts/groda.jpg)
 ![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
+![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
 ![ytu.jpg]({{site.baseurl}}/assets/images/posts/ytu.jpg)
 ![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
 ![lukas.jpg]({{site.baseurl}}/assets/images/posts/lukas.jpg)
