--- a/_posts/2016-12-06-fiona.md
+++ b/_posts/2016-12-06-fiona.md
@@ -10,6 +10,7 @@ feature: WE CAN.jpg
 ![censur.jpg]({{site.baseurl}}/assets/images/posts/censur.jpg)
 ![h-silentspend-aspirations.jpg]({{site.baseurl}}/assets/images/posts/h-silentspend-aspirations.jpg)
 ![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
+![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
 ![ass.jpg]({{site.baseurl}}/assets/images/posts/ass.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
