--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![bosses.jpg]({{site.baseurl}}/assets/images/posts/bosses.jpg)
 ![trust.jpg]({{site.baseurl}}/assets/images/posts/trust.jpg)
 ![trump.jpg]({{site.baseurl}}/assets/images/posts/trump.jpg)
