--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![groda.jpg]({{site.baseurl}}/assets/images/posts/groda.jpg)
 ![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
 ![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
