--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -5,6 +5,7 @@ title: new pic
 feature: ISSIGT.jpg
 ---
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
+![AHEAD.jpg]({{site.baseurl}}/assets/images/posts/AHEAD.jpg)
 ![groda.jpg]({{site.baseurl}}/assets/images/posts/groda.jpg)
 ![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
 ![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
