--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![for-wbb.jpg]({{site.baseurl}}/assets/images/posts/for-wbb.jpg)
 ![use.jpg]({{site.baseurl}}/assets/images/posts/use.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![AHEAD.jpg]({{site.baseurl}}/assets/images/posts/AHEAD.jpg)
