--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![DENNNN.jpg]({{site.baseurl}}/assets/images/posts/DENNNN.jpg)
 ![cave.jpg]({{site.baseurl}}/assets/images/posts/cave.jpg)
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
 ![pe-for-web.jpg]({{site.baseurl}}/assets/images/posts/pe-for-web.jpg)
@@ -11,4 +12,3 @@ feature: ISSIGT.jpg
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![AHEAD.jpg]({{site.baseurl}}/assets/images/posts/AHEAD.jpg)
 ![argue.jpg]({{site.baseurl}}/assets/images/posts/argue.jpg)
-
