--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![nofeeeel.jpg]({{site.baseurl}}/assets/images/posts/nofeeeel.jpg)
 ![DENNNN.jpg]({{site.baseurl}}/assets/images/posts/DENNNN.jpg)
 ![cave.jpg]({{site.baseurl}}/assets/images/posts/cave.jpg)
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
