--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
 ![krigzon.jpg]({{site.baseurl}}/assets/images/posts/krigzon.jpg)
@@ -29,4 +30,3 @@ feature: tsunami.jpg
 ![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
 ![dig.jpg]({{site.baseurl}}/assets/images/posts/dig.jpg)
 ![webblove.jpg]({{site.baseurl}}/assets/images/posts/webblove.jpg)
-
