--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![NOTHING.jpg]({{site.baseurl}}/assets/images/posts/NOTHING.jpg)
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![nofeeeel.jpg]({{site.baseurl}}/assets/images/posts/nofeeeel.jpg)
 ![DENNNN.jpg]({{site.baseurl}}/assets/images/posts/DENNNN.jpg)
