--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,8 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
+![NOTHING.jpg]({{site.baseurl}}/assets/images/posts/NOTHING.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![bosses.jpg]({{site.baseurl}}/assets/images/posts/bosses.jpg)
 ![trust.jpg]({{site.baseurl}}/assets/images/posts/trust.jpg)
