--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -11,7 +11,6 @@ feature: ISSIGT.jpg
 ![DENNNN.jpg]({{site.baseurl}}/assets/images/posts/DENNNN.jpg)
 ![cave.jpg]({{site.baseurl}}/assets/images/posts/cave.jpg)
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
-![pe-for-web.jpg]({{site.baseurl}}/assets/images/posts/pe-for-web.jpg)
-![for-wbb.jpg]({{site.baseurl}}/assets/images/posts/for-wbb.jpg)
+!![for-wbb.jpg]({{site.baseurl}}/assets/images/posts/for-wbb.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![AHEAD.jpg]({{site.baseurl}}/assets/images/posts/AHEAD.jpg)
