--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -4,6 +4,8 @@ published: true
 title: politik
 feature: uk ut ur eu.jpg
 ---
+![003.jpg]({{site.baseurl}}/assets/images/posts/003.jpg)
+![towardtheendoftime.jpg]({{site.baseurl}}/assets/images/posts/towardtheendoftime.jpg)
 ![kappi.jpg]({{site.baseurl}}/assets/images/posts/kappi.jpg)
 ![ytu.jpg]({{site.baseurl}}/assets/images/posts/ytu.jpg)
 ![blåbotten.jpg]({{site.baseurl}}/assets/images/posts/blåbotten.jpg)
