--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -16,7 +16,7 @@ feature: tsunami.jpg
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![julskinka.jpg]({{site.baseurl}}/assets/images/posts/julskinka.jpg)
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
-![korspojke.jpg]({{site.baseurl}}/assets/images/posts/korspojke.jpg)
+![grabb.jpg]({{site.baseurl}}/assets/images/posts/grabb.jpg)
 ![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
 ![hav.jpg]({{site.baseurl}}/assets/images/posts/hav.jpg)
 ![tyra elvira.jpg]({{site.baseurl}}/assets/images/posts/tyra elvira.jpg)
