--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![REAPET.jpg]({{site.baseurl}}/assets/images/posts/REAPET.jpg)
 ![true friend.jpg]({{site.baseurl}}/assets/images/posts/true friend.jpg)
 ![webbgro.jpg]({{site.baseurl}}/assets/images/posts/webbgro.jpg)
 ![NOTHING.jpg]({{site.baseurl}}/assets/images/posts/NOTHING.jpg)
@@ -13,4 +14,3 @@ feature: ISSIGT.jpg
 ![cave.jpg]({{site.baseurl}}/assets/images/posts/cave.jpg)
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
-
