--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![försvara.jpg]({{site.baseurl}}/assets/images/posts/försvara.jpg)
 ![REAPET.jpg]({{site.baseurl}}/assets/images/posts/REAPET.jpg)
 ![true friend.jpg]({{site.baseurl}}/assets/images/posts/true friend.jpg)
 ![webbgro.jpg]({{site.baseurl}}/assets/images/posts/webbgro.jpg)
