--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
+![SOMMAR.jpg]({{site.baseurl}}/assets/images/posts/SOMMAR.jpg)
 ![försvara.jpg]({{site.baseurl}}/assets/images/posts/försvara.jpg)
 ![REAPET.jpg]({{site.baseurl}}/assets/images/posts/REAPET.jpg)
 ![true friend.jpg]({{site.baseurl}}/assets/images/posts/true friend.jpg)
@@ -13,5 +15,3 @@ feature: ISSIGT.jpg
 ![nofeeeel.jpg]({{site.baseurl}}/assets/images/posts/nofeeeel.jpg)
 ![DENNNN.jpg]({{site.baseurl}}/assets/images/posts/DENNNN.jpg)
 ![cave.jpg]({{site.baseurl}}/assets/images/posts/cave.jpg)
-
-
