--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -4,6 +4,7 @@ published: true
 title: DREAM
 feature: tsunami.jpg
 ---
+![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![packi.jpg]({{site.baseurl}}/assets/images/posts/packi.jpg)
 ![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
