--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,7 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
-
+![moln1.jpg]({{site.baseurl}}/assets/images/posts/moln1.jpg)
 ![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
 ![SOMMAR.jpg]({{site.baseurl}}/assets/images/posts/SOMMAR.jpg)
 ![försvara.jpg]({{site.baseurl}}/assets/images/posts/försvara.jpg)
