--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -9,6 +9,7 @@ feature: GODMORNING.jpg
 ![SOMMAR.jpg]({{site.baseurl}}/assets/images/posts/SOMMAR.jpg)
 ![krig.jpg]({{site.baseurl}}/assets/images/posts/krig.jpg)
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
+![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
 ![NOTHING.jpg]({{site.baseurl}}/assets/images/posts/NOTHING.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![bosses.jpg]({{site.baseurl}}/assets/images/posts/bosses.jpg)
