--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![ENERGI.jpg]({{site.baseurl}}/assets/images/posts/ENERGI.jpg)
 ![FOR-YOU.jpg]({{site.baseurl}}/assets/images/posts/FOR-YOU.jpg)
 ![AHEAD.jpg]({{site.baseurl}}/assets/images/posts/AHEAD.jpg)
 ![root-tree.jpg]({{site.baseurl}}/assets/images/posts/root-tree.jpg)
