--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![RedBlGOOack4HG.jpg]({{site.baseurl}}/assets/images/posts/RedBlGOOack4HG.jpg)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
 ![moln1.jpg]({{site.baseurl}}/assets/images/posts/moln1.jpg)
 ![FRIENDS.jpg]({{site.baseurl}}/assets/images/posts/FRIENDS.jpg)
@@ -15,4 +16,3 @@ feature: ISSIGT.jpg
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
 ![nofeeeel.jpg]({{site.baseurl}}/assets/images/posts/nofeeeel.jpg)
 ![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
-
