--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![GO.jpg]({{site.baseurl}}/assets/images/posts/GO.jpg)
 ![kjol.jpg]({{site.baseurl}}/assets/images/posts/kjol.jpg)
 ![SOMMAR.jpg]({{site.baseurl}}/assets/images/posts/SOMMAR.jpg)
 ![krig.jpg]({{site.baseurl}}/assets/images/posts/krig.jpg)
