--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 ![ros.jpg]({{site.baseurl}}/assets/images/posts/ros.jpg)
 ![THAT FAR.jpg]({{site.baseurl}}/assets/images/posts/THAT FAR.jpg)
 ![GO.jpg]({{site.baseurl}}/assets/images/posts/GO.jpg)
