--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![dont.jpg]({{site.baseurl}}/assets/images/posts/dont.jpg)
 ![gos.jpg]({{site.baseurl}}/assets/images/posts/gos.jpg)
 ![SO FAR.jpg]({{site.baseurl}}/assets/images/posts/SO FAR.jpg)
 ![RedBlGOOack4HG.jpg]({{site.baseurl}}/assets/images/posts/RedBlGOOack4HG.jpg)
@@ -15,5 +16,4 @@ feature: ISSIGT.jpg
 ![REAPET.jpg]({{site.baseurl}}/assets/images/posts/REAPET.jpg)
 ![true friend.jpg]({{site.baseurl}}/assets/images/posts/true friend.jpg)
 ![syyyy.jpg]({{site.baseurl}}/assets/images/posts/syyyy.jpg)
-![nofeeeel.jpg]({{site.baseurl}}/assets/images/posts/nofeeeel.jpg)
-![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
+!![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
