--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -14,6 +14,7 @@ feature: GODMORNING.jpg
 ![klintwebb.jpg]({{site.baseurl}}/assets/images/posts/klintwebb.jpg)
 ![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
 ![NOTHING.jpg]({{site.baseurl}}/assets/images/posts/NOTHING.jpg)
+![försvar.jpg]({{site.baseurl}}/assets/images/posts/försvar.jpg)
 ![HILMA.jpg]({{site.baseurl}}/assets/images/posts/HILMA.jpg)
 ![bosses.jpg]({{site.baseurl}}/assets/images/posts/bosses.jpg)
 ![trust.jpg]({{site.baseurl}}/assets/images/posts/trust.jpg)
