--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![shit.jpg]({{site.baseurl}}/assets/images/posts/shit.jpg)
 ![dont.jpg]({{site.baseurl}}/assets/images/posts/dont.jpg)
 ![gos.jpg]({{site.baseurl}}/assets/images/posts/gos.jpg)
 ![SO FAR.jpg]({{site.baseurl}}/assets/images/posts/SO FAR.jpg)
