--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -5,6 +5,7 @@ title: daily pic
 feature: GODMORNING.jpg
 ---
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
 ![ligh.jpg]({{site.baseurl}}/assets/images/posts/ligh.jpg)
 ![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
 ![ros.jpg]({{site.baseurl}}/assets/images/posts/ros.jpg)
