--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![coulor.jpg]({{site.baseurl}}/assets/images/posts/coulor.jpg)
 ![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
 ![horo.jpg]({{site.baseurl}}/assets/images/posts/horo.jpg)
 ![ljus.jpg]({{site.baseurl}}/assets/images/posts/ljus.jpg)
@@ -19,4 +20,3 @@ feature: ISSIGT.jpg
 ![true friend.jpg]({{site.baseurl}}/assets/images/posts/true friend.jpg)
 !![forwebb.jpg]({{site.baseurl}}/assets/images/posts/forwebb.jpg)
 ![webbdestr.jpg]({{site.baseurl}}/assets/images/posts/webbdestr.jpg)
-
