--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,7 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
-
+![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
 ![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
 ![ligh.jpg]({{site.baseurl}}/assets/images/posts/ligh.jpg)
 ![eat.jpg]({{site.baseurl}}/assets/images/posts/eat.jpg)
