--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![TIGERN.jpg]({{site.baseurl}}/assets/images/posts/TIGERN.jpg)
 ![coulor.jpg]({{site.baseurl}}/assets/images/posts/coulor.jpg)
 ![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
 ![horo.jpg]({{site.baseurl}}/assets/images/posts/horo.jpg)
