--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![THE.jpg]({{site.baseurl}}/assets/images/posts/THE.jpg)
 ![blubo.jpg]({{site.baseurl}}/assets/images/posts/blubo.jpg)
 ![7ter_b.jpg]({{site.baseurl}}/assets/images/posts/7ter_b.jpg)
 ![TIGERN.jpg]({{site.baseurl}}/assets/images/posts/TIGERN.jpg)
