--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -8,6 +8,7 @@ feature: ISSIGT.jpg
 ![THE.jpg]({{site.baseurl}}/assets/images/posts/THE.jpg)
 ![blubo.jpg]({{site.baseurl}}/assets/images/posts/blubo.jpg)
 ![7ter_b.jpg]({{site.baseurl}}/assets/images/posts/7ter_b.jpg)
+![larven.jpg]({{site.baseurl}}/assets/images/posts/larven.jpg)
 ![TIGERN.jpg]({{site.baseurl}}/assets/images/posts/TIGERN.jpg)
 ![coulor.jpg]({{site.baseurl}}/assets/images/posts/coulor.jpg)
 ![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
@@ -16,4 +17,3 @@ feature: ISSIGT.jpg
 ![SO FAR.jpg]({{site.baseurl}}/assets/images/posts/SO FAR.jpg)
 ![RedBlGOOack4HG.jpg]({{site.baseurl}}/assets/images/posts/RedBlGOOack4HG.jpg)
 ![bra.jpg]({{site.baseurl}}/assets/images/posts/bra.jpg)
-
