--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,8 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![elds.jpg]({{site.baseurl}}/assets/images/posts/elds.jpg)
+
 ![moder theresa.jpg]({{site.baseurl}}/assets/images/posts/moder theresa.jpg)
 ![THE.jpg]({{site.baseurl}}/assets/images/posts/THE.jpg)
 ![blubo.jpg]({{site.baseurl}}/assets/images/posts/blubo.jpg)
