--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,8 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![fire.jpg]({{site.baseurl}}/assets/images/posts/fire.jpg)
+
 ![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
 ![liars.jpg]({{site.baseurl}}/assets/images/posts/liars.jpg)
 ![ligh.jpg]({{site.baseurl}}/assets/images/posts/ligh.jpg)
