--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -34,3 +34,6 @@ feature: tsunami.jpg
 ![love.jpg]({{site.baseurl}}/assets/images/posts/love.jpg)
 ![dig.jpg]({{site.baseurl}}/assets/images/posts/dig.jpg)
 ![webblove.jpg]({{site.baseurl}}/assets/images/posts/webblove.jpg)
+![larven.jpg]({{site.baseurl}}/assets/images/posts/larven.jpg)
+![white.jpg]({{site.baseurl}}/assets/images/posts/white.jpg)
+
