--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![STRO.jpg]({{site.baseurl}}/assets/images/posts/STRO.jpg)
 ![svord.jpg]({{site.baseurl}}/assets/images/posts/svord.jpg)
 ![elds.jpg]({{site.baseurl}}/assets/images/posts/elds.jpg)
 ![moder theresa.jpg]({{site.baseurl}}/assets/images/posts/moder theresa.jpg)
