--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,6 +12,7 @@ feature: tsunami.jpg
 ![fisk.jpg]({{site.baseurl}}/assets/images/posts/fisk.jpg)
 ![landscape.jpg]({{site.baseurl}}/assets/images/posts/landscape.jpg)
 ![kulla.jpg]({{site.baseurl}}/assets/images/posts/kulla.jpg)
+![snakeee.jpg]({{site.baseurl}}/assets/images/posts/snakeee.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
@@ -33,3 +34,5 @@ feature: tsunami.jpg
 ![webblove.jpg]({{site.baseurl}}/assets/images/posts/webblove.jpg)
 ![larven.jpg]({{site.baseurl}}/assets/images/posts/larven.jpg)
 ![white.jpg]({{site.baseurl}}/assets/images/posts/white.jpg)
+![fosh.jpg]({{site.baseurl}}/assets/images/posts/fosh.jpg)
+
