--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![NEW MOON.jpg]({{site.baseurl}}/assets/images/posts/NEW MOON.jpg)
 ![STRANGE.jpg]({{site.baseurl}}/assets/images/posts/STRANGE.jpg)
 ![SYMMM.jpg]({{site.baseurl}}/assets/images/posts/SYMMM.jpg)
 ![STRO.jpg]({{site.baseurl}}/assets/images/posts/STRO.jpg)
