--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,6 +4,7 @@ published: true
 title: daily pic
 feature: GODMORNING.jpg
 ---
+![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
 ![tran.jpg]({{site.baseurl}}/assets/images/posts/tran.jpg)
 ![fire.jpg]({{site.baseurl}}/assets/images/posts/fire.jpg)
 ![blu.jpg]({{site.baseurl}}/assets/images/posts/blu.jpg)
