--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ÅR.jpg]({{site.baseurl}}/assets/images/posts/ÅR.jpg)
 ![NEW MOON.jpg]({{site.baseurl}}/assets/images/posts/NEW MOON.jpg)
 ![STRANGE.jpg]({{site.baseurl}}/assets/images/posts/STRANGE.jpg)
 ![SYMMM.jpg]({{site.baseurl}}/assets/images/posts/SYMMM.jpg)
@@ -13,4 +14,3 @@ feature: ISSIGT.jpg
 ![moder theresa.jpg]({{site.baseurl}}/assets/images/posts/moder theresa.jpg)
 ![blubo.jpg]({{site.baseurl}}/assets/images/posts/blubo.jpg)
 ![horo.jpg]({{site.baseurl}}/assets/images/posts/horo.jpg)
-![gos.jpg]({{site.baseurl}}/assets/images/posts/gos.jpg)
