--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -4,6 +4,7 @@ published: true
 title: ASTRO WEEKLY
 feature: 1234.jpg
 ---
+![MOON.jpg]({{site.baseurl}}/assets/images/posts/MOON.jpg)
 ![FEB.jpg]({{site.baseurl}}/assets/images/posts/FEB.jpg)
 ![DAY.jpg]({{site.baseurl}}/assets/images/posts/DAY.jpg)
 ![skåp.jpg]({{site.baseurl}}/assets/images/posts/skåp.jpg)
