--- a/_posts/2017-01-19-new-pic.md
+++ b/_posts/2017-01-19-new-pic.md
@@ -4,6 +4,7 @@ published: true
 title: new pic
 feature: ISSIGT.jpg
 ---
+![ok.jpg]({{site.baseurl}}/assets/images/posts/ok.jpg)
 ![BACK.jpg]({{site.baseurl}}/assets/images/posts/BACK.jpg)
 ![FORVER.jpg]({{site.baseurl}}/assets/images/posts/FORVER.jpg)
 ![ÅR.jpg]({{site.baseurl}}/assets/images/posts/ÅR.jpg)
@@ -13,5 +14,4 @@ feature: ISSIGT.jpg
 ![STRO.jpg]({{site.baseurl}}/assets/images/posts/STRO.jpg)
 ![svord.jpg]({{site.baseurl}}/assets/images/posts/svord.jpg)
 ![elds.jpg]({{site.baseurl}}/assets/images/posts/elds.jpg)
-![moder theresa.jpg]({{site.baseurl}}/assets/images/posts/moder theresa.jpg)
-![horo.jpg]({{site.baseurl}}/assets/images/posts/horo.jpg)
+
